--- a/style.css
+++ b/style.css
@@ -188,3 +188,23 @@ li p:first-child {
 li p:last-child {
  padding-bottom: 0;
 }
+
+dl {
+    border: 3px double #ccc;
+    padding: 0.5em;
+}
+dt {
+    float: left;
+    clear: left;
+    width: 100px;
+    text-align: right;
+    font-weight: bold;
+    color: green;
+}
+dt:after {
+    content: ":";
+}
+dd {
+    margin: 0 0 0 110px;
+    padding: 0 0 0.5em 0;
+}
