--- a/style.css
+++ b/style.css
@@ -215,6 +215,8 @@ dd {
     margin-right: 0px;
     margin-bottom: 1em;
     margin-left: 0px;
+    border-top: 0px;
+    padding: 0px;
 }
 
 .parameter {
