--- a/style.css
+++ b/style.css
@@ -219,3 +219,13 @@ dd {
 .highlight {
     color: red;
 }
+
+highlight {
+    color: red;
+}
+
+sample_code {
+    font-family: monospace;
+    margin-left: 2em;
+    white-space: pre;
+}
