--- a/style.css
+++ b/style.css
@@ -211,9 +211,10 @@ dd {
 }
 
 .parameter {
-    color: black;
+    color: grey;
     font-style:italic;
     font-family: monospace;
+    text-transform:uppercase;
 }
 
 .highlight {
